[package]
name = "hyperwall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
cfg-if = "1.0.0"
raw-window-handle = "0.5"
tokio = { version = "1.20.1", features = ["full"] }
wgpu = { git = "https://github.com/gfx-rs/wgpu", branch = "master" }
x11rb = { version = "0.10.1", features = ["allow-unsafe-code"] }
